<resources>
    <string name="app_name">Laser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_dash">Dash</string>
    <string name="nav_budget">My Budget</string>
    <string name="nav_transactions">My Transactions</string>
    <string name="nav_goals">Goals</string>
    <string name="nav_transaction_add">Add Transaction</string>
    <string name="nav_scheduled_transactions">Scheduled Transactions</string>
    <string name="nav_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="settings_btn_clear">Clear Database</string>

    <!-- ORDER/indexes of this string array referenced in BudgetChartFragment.java
    Changing the order will change behavior of spinner -->
    <string-array name="spinner_dates">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
        <item>All</item>
    </string-array>

    <string-array name="spinner_repeat">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_budget">My Budget</string>
    <string name="title_transactions">My Transactions</string>
    <string name="title_goals">Goals</string>
    <string name="title_add">Add a transaction</string>
    <string name="title_scheduled_transactions">Scheduled Transactions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="no_category">Other</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="title_edit_transaction">Edit Transaction</string>

    <string name="budget_tab_in">Earned</string>
    <string name="budget_tab_out">Spent</string>

    <string name="st_add">New Scheduled Transaction</string>
    <string name="btn_st_change_date">Change Date</string>

    <string name="enter_an_amount">Please enter an amount.</string>
    <string name="db_error">An error occurred.</string>

    <string name="st_number">%d on schedule</string>
    <string name="st_enabled">Enabled</string>
    <string name="st_edit">Edit Scheduled Transaction</string>

    <string name="btn_earned">Earned</string>
    <string name="btn_spent">Spent</string>
    <string name="btn_save">Save</string>
    <string name="hint_money">0.00</string>
    <string name="prompt_repeat">Repeat</string>
    <string name="st_first_occurence">First occurence</string>
    <string name="description_hint">Description</string>
    <string name="category_hint">Category</string>
    <string name="transaction_add">Add transaction</string>
    <string name="title_transaction_detail">Transaction Details</string>
    <string name="title_st_detail">Scheduled Transaction Details</string>
    <string name="label_amount">Amount</string>
    <string name="label_date">Date</string>
    <string name="label_description">Description</string>
    <string name="label_category">Category</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_enabled">Enabled</string>
    <string name="settings_notifications">Allow notifications</string>
</resources>
