<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stephengrice.laser.fragment.TransactionEditFragment">

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_text_size"
        android:text="@string/title_edit_transaction" />

    <EditText
        android:id="@+id/txt_transaction_amount"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="$0.00"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <ToggleButton
            android:id="@+id/btn_earned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:background="@color/colorTintGreen"
            android:textOn="@string/btn_earned"
            android:textOff="@string/btn_earned"
            />
        <ToggleButton
            android:id="@+id/btn_spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:background="@color/colorTintRed"
            android:textOn="@string/btn_spent"
            android:textOff="@string/btn_spent"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/txt_transaction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="Description (optional)" />

    <AutoCompleteTextView
        android:id="@+id/transaction_category_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="Category (optional)"
        />


    <Button
        android:id="@+id/btn_update_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="Save" />

</LinearLayout>
