<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stephengrice.laser.fragment.ScheduledTransactionAddFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="@dimen/title_text_size"
        android:text="@string/st_edit" />

    <EditText
        android:id="@+id/txt_st_amount"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="$0.00"/>

    <ToggleButton
        android:id="@+id/btn_earned_spent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:background="@color/colorTintRed"
        android:textOff="Spent"
        android:textOn="Earned"/>

    <EditText
        android:id="@+id/txt_st_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="Description (optional)" />

    <AutoCompleteTextView
        android:id="@+id/txt_st_category_autocomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="Category (optional)"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_st_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Today"
            />

        <Button
            android:id="@+id/btn_change_st_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_st_change_date"
            />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner_repeat"
        android:entries="@array/spinner_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/chk_enabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/st_enabled" />

    <Button
        android:id="@+id/btn_save_st"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Save" />


</LinearLayout>
